=== 1.0.0 / 1 May 2008

* (no changes since the last preview release)


=== 1.0 Preview Release 2 (0.99.1) / 19 Apr 2008

* Don't try to select on closed IO streams [Jamis Buck]


=== 1.0 Preview Release 1 (0.99.0) / 10 Apr 2008

* First release of Net::SSH::Multi