@@ -1,3 +1,8 @@
+=== unreleased
+
+* Add Channel#on_open_failed callback hook [Jamis Buck]
+
+
 === 1.0.0 / 1 May 2008
 
 * (no changes since the last preview release)
